log
Thu 14 Sep 2023 04:24:29 AM UTC: 
 tests:  1|8
total_score: 0/70
2f50cd6
Thu 14 Sep 2023 04:31:09 AM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|8
total_score: 0/70
9d5f1c6
Thu 14 Sep 2023 04:31:35 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
afecf97
Thu 14 Sep 2023 04:42:37 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
13754b8
Thu 14 Sep 2023 04:47:17 AM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:85:27: error: ‘NULK’ undeclared (first use in this function); did you mean ‘NULL’?
   85 |   while (tree->current != NULK){
      |                           ^~~~
      |                           NULL
treemap.c:85:27: note: each undeclared identifier is reported only once for each function it appears in
treemap.c: At top level:
treemap.c:91:5: error: expected identifier or ‘(’ before ‘return’
   91 |     return NULL;
      |     ^~~~~~
treemap.c:92:1: error: expected identifier or ‘(’ before ‘}’ token
   92 | }
      | ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:90:3: error: control reaches end of non-void function [-Werror=return-type]
   90 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
8808d7f
